--- a/apps/samples/framework/HelloWorldJavaScript/html-template/js-playlist.html
+++ b/apps/samples/framework/HelloWorldJavaScript/html-template/js-playlist.html
@@ -16,7 +16,7 @@
 			  name: "HelloWorldJavaScript"
 			};
 	
-			swfobject.embedSWF("JavaScriptDynamicStreamSwitchControl.swf", "player", "640", "352", "10.0.0", "expressInstall.swf", flashvars, params, attributes);    	
+			swfobject.embedSWF("JavaScriptPlaylist.swf", "player", "640", "352", "10.0.0", "expressInstall.swf", flashvars, params, attributes);    	
 	 	}
 	
 	
