--- a/apps/samples/framework/HelloWorldJavaScript/html-template/js-playlist.html
+++ b/apps/samples/framework/HelloWorldJavaScript/html-template/js-playlist.html
@@ -12,8 +12,8 @@
 			var flashvars = false;
 			var params = {};
 			var attributes = {
-			  id: "HelloWorldJavaScript",
-			  name: "HelloWorldJavaScript"
+			  id: "JavaScriptPlaylist",
+			  name: "JavaScriptPlaylist"
 			};
 	
 			swfobject.embedSWF("JavaScriptPlaylist.swf", "player", "640", "352", "10.0.0", "expressInstall.swf", flashvars, params, attributes);    	
@@ -23,7 +23,7 @@
 		window.onload = loadStrobeMediaPlayback;
 		
    		/**
-   		* This function will be called by the HelloWorldJavaScript.swf
+   		* This function will be called by the JavaScriptPlaylist.swf
    		* once it registered the javascript callback functions.
    		*/
    		function onHelloWorldJavaScriptLoaded(objectID)
