--- a/apps/samples/framework/OSMFPlayer/html-template/index.template.html
+++ b/apps/samples/framework/OSMFPlayer/html-template/index.template.html
@@ -15,7 +15,7 @@
     		var parameters =
     			{	id: "1"
     			,	configuration: "assets/configuration.xml"
-    			,	url: "http://mediapm.edgesuite.net/osmf/content/test/logo_animated.flv"
+    			,	url: "http://10.131.237.104/hds-live/hs_mbr_dvr_HD/_definst_/liveevent.f4m"
     			,	backgroundColor: "0x000000"
     			,	autoHideControlBar: "false"
     			,	autoSwitchQuality: "true"
