Changed the asset to be played by OSMFPlayer to a public one. (used to be an internal asset)
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2300 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/apps/samples/framework/OSMFPlayer/html-template/index.template.html
+++ b/apps/samples/framework/OSMFPlayer/html-template/index.template.html
@@ -15,7 +15,7 @@
     		var parameters =
     			{	id: "1"
     			,	configuration: "assets/configuration.xml"
-    			,	url: "http://10.131.237.104/hds-live/hs_mbr_dvr_HD/_definst_/liveevent.f4m"
+    			,	url: "http://mediapm.edgesuite.net/strobe/content/test/AFaerysTale_sylviaApostol_640_500_short.flv"
     			,	backgroundColor: "0x000000"
     			,	autoHideControlBar: "false"
     			,	autoSwitchQuality: "true"
