--- a/apps/samples/framework/OSMFPlayer/html-template/index.template.html
+++ b/apps/samples/framework/OSMFPlayer/html-template/index.template.html
@@ -16,7 +16,7 @@
     			{	id: "1"
     			,	configuration: "assets/configuration.xml"
     			,	url: "http://mediapm.edgesuite.net/strobe/content/test/AFaerysTale_sylviaApostol_640_500_short.flv"
-    			,	backgroundColor: "0x000000"
+    			//,	backgroundColor: "none"
     			,	autoHideControlBar: "false"
     			,	autoSwitchQuality: "true"
     			,	autoPlay: "true"
@@ -39,7 +39,7 @@
 				, "10.0.0"
 				, {}
 				, parameters
-				, { allowFullScreen: "true" }
+				, { allowFullScreen: "true", wmode: "direct" }
 				, { name: "OSMFPlayer" }
 				);
 			
